# Monkey-Convert

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README~  aclocal.m4  configure  configure.ac
.github/workflows/: amplify.yml
src/: Makefile.am  Makefile.in  convert.cxx  convert.h  fileio.cxx  fileio.h  main.cc
