## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = monkey_convert

monkey_convert_SOURCES = \
	main.cc \
	convert.cxx \
	convert.h \
	fileio.cxx \
	fileio.h

monkey_convert_LDFLAGS = 

monkey_convert_LDADD = 

